@@ -75,7 +75,6 @@ include/Makefile
 include/libumwsu/Makefile
 pkgconfig/Makefile
 src/Makefile
-tests/Makefile
 tools/Makefile
 ])
 AC_OUTPUT
